==> zephyrproject-rtos/zephyr/drivers/rtc/rtc_max32.c <==
#define DT_DRV_COMPAT adi_max32_rtc
#include <errno.h>
#include <zephyr/device.h>
#include <zephyr/kernel.h>
#include <zephyr/init.h>
#include <zephyr/sys/util.h>
#include <zephyr/spinlock.h>
#include <zephyr/devicetree.h>
#include <zephyr/drivers/rtc.h>
#include <zephyr/sys/sys_io.h>
#include <zephyr/sys/timeutil.h>
#include <rtc.h>
#include <time.h>
#include "rtc_utils.h"
#define MSEC_TO_NSEC(x) ((x) * 1000000)
#define NSEC_TO_MSEC(x) ((x) / 1000000)
#define NSEC_TO_RSSA(x) (0 - ((NSEC_TO_MSEC(x) * 4096) / 1000))
#define MAX_PPB 127
#define MIN_PPB -127
#define SECS_PER_MIN  60
#define SECS_PER_HOUR (60 * SECS_PER_MIN)
#define SECS_PER_DAY  (24 * SECS_PER_HOUR)
#define SECS_PER_WEEK (7 * SECS_PER_DAY)
#define MAX_ALARM_SEC SECS_PER_WEEK - 1
#define RTC_ALARM_MASK                                                                             \
	(RTC_ALARM_TIME_MASK_SECOND | RTC_ALARM_TIME_MASK_MINUTE | RTC_ALARM_TIME_MASK_HOUR |      \
	 RTC_ALARM_TIME_MASK_WEEKDAY)

static void rtc_max32_isr(const struct device *dev)
{
#if defined(CONFIG_RTC_ALARM) || (CONFIG_RTC_UPDATE)
	struct max32_rtc_data *const data = dev->data;
	int flags = MXC_RTC_GetFlags();
#else
	ARG_UNUSED(dev);
#endif

#ifdef CONFIG_RTC_ALARM
	if (flags & MXC_RTC_INT_FL_LONG) {
		if (data->alarm_cb) {
			data->alarm_cb(dev, 0, data->alarm_cb_data);
			data->alarm_pending = false;
		} else {
			data->alarm_pending = true;
		}
		MXC_RTC_ClearFlags(MXC_RTC_INT_FL_LONG);
	}
#endif /* CONFIG_RTC_ALARM */

#ifdef CONFIG_RTC_UPDATE
	if (flags & MXC_RTC_INT_FL_SHORT) {
		if (data->update_cb) {
			data->update_cb(dev, data->update_cb_data);
		}
		MXC_RTC_ClearFlags(MXC_RTC_INT_FL_SHORT);
	}
#endif /* CONFIG_RTC_UPDATE */
}

static int rtc_max32_init(const struct device *dev)
{
#if defined(CONFIG_RTC_ALARM) || defined(CONFIG_RTC_UPDATE)
	const struct max32_rtc_config *cfg = dev->config;

	cfg->irq_func();
#endif /* CONFIG_RTC_ALARM || CONFIG_RTC_UPDATE */
	return 0;
}
